# doudesu

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/workflows/: build-gui.yml  publish.yml
dodesu/: __init__.py  __main__.py  app.py  cli.py  doudesu.py  doudesu_flet.py  models.py
doudesu/: __init__.py  __main__.py  cli.py  doudesu.py  doudesu_flet.py  loading_animation.py
doudesu/api/: __init__.py
doudesu/core/: doudesu.py
doudesu/models/: __init__.py  manga.py
doudesu/ui/: __init__.py  cli.py  gui.py
doudesu/utils/: __init__.py  constants.py  converter.py
