[project]
name = "dodesu"
version = "0.1.0"
description = "Doudesu is a Python script that automates the process of downloading manga from the website 'doujindesu.tv' and converting them into PDF format."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "flet>=0.24.1",
    "pillow>=11.0.0",
    "reportlab>=4.2.5",
    "requests>=2.32.3",
    "rich>=13.9.3",
    "tls-client>=1.0.1",
]

[dependency-groups]
lint = [
    "ruff>=0.7.4",
]
